2011-10-10  Kaz Kylheku  <kaz@kylheku.com>

	Improved support for broken unicode.
	Regex support for extra-large character sets not compiled in
	if wchar_t is not wide enough for it.
	The utf-8 properly throws exceptions when encountering characters
	that it cannot represent, instead of silently ignoring the
	situation and continuing with incorrectly computed data.

	* regex.c (FULL_UNICODE): New macro.
	(CHAR_SET_L3, CHAR_SET_L2_LO, CHAR_SET_L2_HI): Only defined
	if full unicde is available.
	(CHSET_XLARGE, cset_L3_t, struct xlarge_char_set,
	L2_full, L3_fill_range, L3_contains): Ditto.
	(unon char_set): Member x1 present only under FULL_UNICODE.
	(char_set_destroy, char_set_add, char_set_add_range,
	char_set_contains): CHSET_XLARGE cases only available on
	FULL_UNICODE.
	(char_set_compile): Default cst variable to CHSET_LARGE.

	* utf8.c (FULL_UNICODE): New macro.
	(conversion_error): New function.
	(utf8_from_uc): Throw error if not FULL_UNICODE and character is
	outside the BMP.
	(utf8_decode): Likewise.

2011-10-09  Kaz Kylheku  <kaz@kylheku.com>

	* HACKING: Documented portability hacks for narrow wchar_t.

2011-10-09  Kaz Kylheku  <kaz@kylheku.com>

	Version 039

	Ported to Cygwin.

	Horizontal modes for @(trailer), @(skip).

	New :greedy keyword in skip which can be given instead of max
	distance to give it longest match semantics.

	@(collect) and @(coll) support a new clause, @(last).

	The :times keyword in @(collect) and @(coll) introduced in the
	previous release has a different meaning. The keywords :mintimes
	and :maxtimes are added, and :maxtimes behaves like :times
	did previously.

	There is a :vars keyword in @(collect) and @(coll) to have
	some control over what bindings are collected, as well
	as error checking for missing bindings and defaulting behavior.

	New @(eol) directive for explicitly matching the end of
	the input or end of a line.

	New lexical syntax: @(...) and @abc is allowed within expressions.